# Podge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO
assets/glsl/: aabb_line_vert.glsl  basic_frag.glsl  basic_vert.glsl  circle_frag.glsl  circle_vert.glsl  shape_frag.glsl  shape_vert.glsl
assets/levels/: 0.tmx  1.tmx  2.tmx  demo.tmx  sandbox.tmx  test.tmx  testlevel.tmx
assets/tilesets/: balloon.json  balloons.tsx  barrel.json  barrels.tsx  bird.json  bird.tsx  birds.tsx  bump_bat.json  bump_bat.tsx  bump_bats.tsx  bumpers.tsx  leaf.tsx  leaves.tsx  orbit_indicators.tsx  podge.json  podge.tsx  podge_bubble.json  spike1.json  spikes.tsx  test_wall1.json  test_wall2.json  test_wall3.json  test_wall4.json  test_walls.tsx  vines.tsx  waffle10.json  waffle2.json  waffle9.json  waffles.tsx  walls.tsx  windmill2.json  windmills.tsx
assets/tilesets/bumpers/: bumper.json  orbit_indicator.json
assets/tilesets/leaves/: leaf.json
assets/tilesets/orbit_indicators/: generic.json  rubber.json
assets/tilesets/vines/: vine1.json  vine2.json  vine3.json  vine4.json  vine5.json  vine6.json  vine7.json  vine8.json  vine9.json
assets/tilesets/waffles/rough/: waffle11.json  waffle12.json  waffle13.json  waffle14.json  waffle15.json  waffle16.json  waffle17.json  waffle3.json  waffle5.json  waffle6.json  waffle8.json
assets/tilesets/waffles/rubber/: waffle1.json  waffle4.json  waffle7.json
assets/tilesets/walls/rough/: wall10.json  wall4.json  wall5.json  wall9.json
assets/tilesets/walls/rubber/: wall1.json  wall2.json  wall3.json  wall6.json  wall7.json  wall8.json
assets/tilesets/windmills/rubber/: windmill1.json
aux/: gen_systems.py  gen_types.py  ogg_config_types.h  svg2png  system.py
lib/: CMakeLists.txt
lib/SDL2/: CMakeLists.txt
lib/SDL2/include/: SDL_config_iphoneos.h
lib/SDL2/src/video/: .SDL_video.c.swp
lib/SDL2_mixer/Xcode-iOS/SDL_mixer.xcodeproj/project.xcworkspace/xcuserdata/sashavol.xcuserdatad/: UserInterfaceState.xcuserstate
lib/SDL2_podge/: CMakeLists.txt.patch  README
lib/SDL2_podge/include/: SDL_config_iphoneos.h.patch
lib/SDL2_podge_placeholders/: README  SDL.c  SDL_mixer.c  common.h
lib/glm/glm/gtx/: .matrix_transform_2d.hpp.swp
lib/liquidfun/Box2D/Box2D/Collision/Shapes/: .b2EdgeShape.h.swp
lib/liquidfun/Box2D/Box2D/Dynamics/: .b2Body.h.swp
lib/nanovg/src/: .nanovg.c.swp  .nanovg.h.swp
podge/: common.hpp  main.cpp  podge.cpp  podge.hpp  systems.json  types.json
podge/os/: gfx.hpp  gfx_opengles2.cpp  resources.hpp
podge/os/android/: gfx.cpp  resources.cpp
podge/os/generic/: resources.cpp
podge/os/ios/: resources.mm
podge/systems/: ambient_source.inl  anchor.inl  balloon.inl  basic.inl  bird.inl  bird_trigger.inl  bump_bat.inl  bumper.inl  camera.inl  camera_zone.inl  debug_shapes.inl  finish_trigger.inl  glass.inl  leaf.inl  obstacle.inl  path.inl  podge.inl  sensor.inl  wall.inl
podge/systems/barrel/: barrel.inl  barrel_trigger.inl
podge/systems/spike/: spike.inl  spike_trigger.inl
